--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     />
 
     <title>Frontend Mentor | E-commerce product page</title>
+    <link rel="stylesheet" href="css/styles.css" />
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
