add header's styles

--- a/index.html
+++ b/index.html
@@ -29,18 +29,24 @@
   <body>
     <main class="main-container">
       <header class="header">
-        <img src="./images/icon-menu.svg" alt="burguer icon menu" />
-        <img src="./images/logo.svg" alt="logo" />
+        <div class="header__navigation">
+          <img
+            class="header__menu"
+            src="./images/icon-menu.svg"
+            alt="burguer icon menu"
+          />
+          <img class="header__logo" src="./images/logo.svg" alt="logo" />
 
-        <nav class="navbar">
-          <ul class="navbar__items">
-            <li><a href="#" class="navbar__link">Collections</a></li>
-            <li><a href="#" class="navbar__link">Men</a></li>
-            <li><a href="#" class="navbar__link">Women</a></li>
-            <li><a href="#" class="navbar__link">About</a></li>
-            <li><a href="#" class="navbar__link">Contact</a></li>
-          </ul>
-        </nav>
+          <nav class="navbar">
+            <ul class="navbar__items">
+              <li><a href="#" class="navbar__link">Collections</a></li>
+              <li><a href="#" class="navbar__link">Men</a></li>
+              <li><a href="#" class="navbar__link">Women</a></li>
+              <li><a href="#" class="navbar__link">About</a></li>
+              <li><a href="#" class="navbar__link">Contact</a></li>
+            </ul>
+          </nav>
+        </div>
 
         <!-- Modal Navbar -->
         <div class="modal-navbar__backgruound">
@@ -66,7 +72,11 @@
             <div class="header__cart--notification">3</div>
             <img src="./images/icon-cart.svg" alt="icon cart" />
           </div>
-          <img src="./images/image-avatar.png" alt="avatar" />
+          <img
+            class="header__avatar"
+            src="./images/image-avatar.png"
+            alt="avatar"
+          />
         </div>
       </header>
 
