--- a/index.html
+++ b/index.html
@@ -77,6 +77,36 @@
             src="./images/image-avatar.png"
             alt="avatar"
           />
+
+          <!-- Modal Cart -->
+          <div class="cart-modal">
+            <p class="cart-modal__title">Cart</p>
+            <div class="cart-modal__checkout-container">
+              <div class="cart-modal__details-container">
+                <img
+                  class="cart-modal__image"
+                  src="./images/image-product-1-thumbnail.jpg"
+                  alt="image product 1"
+                />
+                <div>
+                  <p class="cart-modal__product">
+                    Fall Limited Edition Sneakers
+                  </p>
+                  <p class="cart-modal__price">
+                    $125.00 x3
+                    <span class="cart-modal__price--color">$375.00</span>
+                  </p>
+                </div>
+                <img
+                  class="cart-modal__delete"
+                  src="./images/icon-delete.svg"
+                  alt="delete icon"
+                />
+              </div>
+              <button class="cart-modal__btn-delete">Checkout</button>
+            </div>
+          </div>
+          <!-- End Modal Cart -->
         </div>
       </header>
 
@@ -151,35 +181,12 @@
               />
             </div>
             <button class="details__button">
-              <img src="./images/icon-cart.svg" alt="icon-cart" />Add to cart
+              <img src="./images/icon-cart-white.svg" alt="icon-cart" />Add to
+              cart
             </button>
           </div>
         </article>
       </section>
-
-      <!-- Modal Cart -->
-      <div class="cart-modal">
-        <p class="cart-modal__title">Cart</p>
-        <div class="cart-modal__checkout-container">
-          <div class="cart-modal__details-container">
-            <img
-              src="./images/image-product-1-thumbnail.jpg"
-              alt="image product 1"
-            />
-            <div>
-              <p class="cart-modal__product">Autumn Limited Edition...</p>
-              <p class="cart-modal__price">$125.00 x3 <span>$375.00</span></p>
-            </div>
-            <img
-              class="cart-modal__delete"
-              src="./images/icon-delete.svg"
-              alt="delete icon"
-            />
-          </div>
-          <button class="cart-modal__btn-delete">Checkout</button>
-        </div>
-      </div>
-      <!-- End Modal Cart -->
 
       <!-- Gallery Modal -->
       <div class="gallery-modal__background">
@@ -204,7 +211,7 @@
           <div class="gallery-modal__thumbnails">
             <img
               id="m1"
-              class="gallery-modal__thumbnail"
+              class="gallery-modal__thumbnail gallery-modal__thumbnail--active"
               src="./images/image-product-1-thumbnail.jpg"
               alt="thumbnail 1"
             />
